--- a/python_analysis/main.ipynb
+++ b/python_analysis/main.ipynb
@@ -138,7 +138,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Simulate "
+    "### Simulate for the "
    ]
   },
   {
